--- a/passwort.html
+++ b/passwort.html
@@ -12,6 +12,9 @@
 		<title>Passwort Generator</title>
 	</head>
 	<body>
+		<div class="dialog" id="wrong-text" title="Fehler bei der Eingabe!">
+			<p>Bitte geben Sie nur Zahlen von 1 bis 6 ein.</p>
+		</div>
 		<div id="header">
 			<h1>Willkommen beim Password Generator</h1>
 			<h3>Dieser Password Generator hilft Ihnen dabei einfach merkbare und kryptograpisch sichere Passwörter zu erstellen.</h3>
@@ -28,7 +31,7 @@
 			</div>
 			<form id="dice-form">
 				<label for="dice-thrown">Gewürfelt:<br></label>
-				<input id="dice-thrown" name="dice-thrown" type="text">
+				<input id="dice-thrown" name="dice-thrown" maxlength="15" type="text">
 				<input class="LCD" type="text" readonly="readonly" id="thrown"><span class="LCD">/</span>
 				<input class="LCD" type="text" readonly="readonly" id="needed">
 				<div id="progress"></div> 
