Updated the password.html file name
to make things easier when later switching to multi language setups.

--- a/index.html
+++ b/index.html
@@ -12,16 +12,15 @@
 	</head>
 	<body class="ui-widget" >
 		<div id="header">
-			<h1>Willkommen beim Password Generator</h1>
-			<h3>Dieser Password Generator hilft Ihnen dabei einfach merkbare und kryptograpisch sichere Passwörter zu erstellen.</h3>
+			<h1>FlyingFoX' Passwort Generator</h1>
 		</div>
 		<ul id="menu">
 			<li ><a href="/flyingfox/password-finder/index.html">Willkommen</a></li>
-			<li ><a href="/flyingfox/password-finder/passwort.html">Neues Passwort generieren</a></li>
+			<li ><a href="/flyingfox/password-finder/password.html">Neues Passwort generieren</a></li>
 			<li><a href="/flyingfox/password-finder/faq.html">Häufig gestellte Fragen (FAQ)</a></li>
 		</ul>
 		<div id="body">
-			<form id="security-form" class="ui-widget ui-widget-content" action="/flyingfox/password-finder/passwort.html">
+			<form id="security-form" class="ui-widget ui-widget-content" action="/flyingfox/password-finder/passwor.html">
 				<fieldset>
 					<legend>Wählen Sie aus welche Sicherheitsstufe Ihr Passwort haben soll</legend>
 					<input type="radio" name="security" id="security-low" value="low" checked />
