--- a/password.html
+++ b/password.html
@@ -12,16 +12,15 @@
 		<title>Passwort Generator</title>
 	</head>
 	<body>
-		<div class="dialog" id="wrong-text" title="Fehler bei der Eingabe!">
+		<div class="input-error-dialog" id="wrong-text" title="Fehler bei der Eingabe!">
 			<p>Bitte geben Sie nur Zahlen von 1 bis 6 ein.</p>
 		</div>
 		<div id="header">
-			<h1>Willkommen beim Password Generator</h1>
-			<h3>Dieser Password Generator hilft Ihnen dabei einfach merkbare und kryptograpisch sichere Passwörter zu erstellen.</h3>
+			<h1>FlyingFoX' Passwort Generator</h1>
 		</div>
 		<ul id="menu">
 			<li ><a href="/flyingfox/password-finder/index.html">Willkommen</a></li>
-			<li ><a href="/flyingfox/password-finder/passwort.html">Neues Passwort generieren</a></li>
+			<li ><a href="/flyingfox/password-finder/password.html">Neues Passwort generieren</a></li>
 			<li><a href="/flyingfox/password-finder/faq.html">Häufig gestellte Fragen (FAQ)</a></li>
 		</ul>
 		<div id="body">
