--- a/index.html
+++ b/index.html
@@ -4,58 +4,32 @@
 	<head>
 		<link rel="stylesheet" href="/jqueryui/css/cupertino/jquery-ui-1.8.16.custom.css">
 		<link rel="stylesheet" href="mystyle.css">
-		<script type="text/javascript" src="/flyingfox/jquery-1.6.2.js"></script>
+		<script type="text/javascript" src="/jquery-1.6.2.js"></script>
 		<script type="text/javascript" src="/jqueryui/js/jquery-ui-1.8.16.custom.min.js"></script>
-		<script type="text/javascript" src="/flyingfox/password-finder/visuals.js"></script>
+		<script type="text/javascript" src="visuals.js"></script>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>Passwort Generator</title>
+		<title>FlyingFox&#8217; Passwort Generator</title>
 	</head>
 	<body class="ui-widget" >
-		<div id="header">
-			<h1>FlyingFoX' Passwort Generator</h1>
+		<div id="header" class="ui-state-default" onclick="location.href='index.html';" style="cursor:pointer;">
+			<h1><a href="index.html">FlyingFoX&#8217; Passwort Generator</a></h1>
 		</div>
 		<ul id="menu">
-			<li ><a href="/flyingfox/password-finder/index.html">Willkommen</a></li>
-			<li ><a href="/flyingfox/password-finder/password.html">Neues Passwort generieren</a></li>
-			<li><a href="/flyingfox/password-finder/faq.html">Häufig gestellte Fragen (FAQ)</a></li>
+			<li ><a href="index.html" class="ui-state-active ui-state-default">Startseite</a></li>
+			<li ><a href="password.html">Neues Passwort erstellen</a></li>
+			<li><a href="security.html">Sicherheit</a></li>
+			<li><a href="impressum.html">Impressum</a></li>
 		</ul>
 		<div id="body">
-			<form id="security-form" class="ui-widget ui-widget-content" action="/flyingfox/password-finder/passwor.html">
-				<fieldset>
-					<legend>Wählen Sie aus welche Sicherheitsstufe Ihr Passwort haben soll</legend>
-					<input type="radio" name="security" id="security-low" value="low" checked />
-					<label for="security-low">Einfach und kurz</label> <br />
-					<input type="radio" name="security" id="security-high" value="high" />
-					<label for="security-high">In absehbarer Zeit unknackbar</label> <br />
-					<p>Es wird empfohlen das generierte Passwort nur für die folgenden Dienste zu verwenden:</p>
-					<div id="usability-security-low">
-						<ul>
-							<li>Webseiten auf denen Sie <i>nicht</i> ihren Namen angeben</li>
-							<li>Webseiten ohne Bezug zu Ihrem Geld</li>
-							<li>Online Spiele</li>
-						</ul>
-					</div>
-					<div id="usability-security-high" >
-						Dieses Passwort ist für alle Dienste geeignet. Sie sollten es aber nicht für mehr als einen der unten aufgeführten Dienste verwenden.
-						Für die folgenden Dienste sollte möglichst kein schwächeres Passwort gewählt werden.
-						<ul>
-							<li>E-Mail</li>
-							<li>Online Shops</li>
-							<li>Online Banking</li>
-							<li>Soziale Netzwerke wie Facebook, Google+, StudiVZ, MeinVZ, Xing, etc.</li>
-						</ul>
-					</div>
-					<button  id="start-generation" type="submit">Neues Passwort generieren</button>
-				</fieldset>
-			</form>
-
-			<div id="debug" class="ui-widget-content ui-widget">
-				<h3 class="ui-widget-header">Debug Text</h3>
-			</div>
-			<div id="passwords-data"></div>
+			<p id="about">Dieser Passwort Generator soll Ihnen helfen sichere und einfach merkbare Passwörter zu erstellen. Dies wird dadurch erreicht, dass die erstellten Passwörter alle aus Worten oder einfachen Zeichenkombinationen bestehen. Ein typisches Passwort könnte z.B. so aussehen: <pre>
+ein tolles Passwort
+</pre>		</p>
+			<a href="password.html" class="button" id="generate-password">Passwort erstellen</a></button>
+			
+			
 		</div>
 		<div id="footer">
-			<!--[if IE]>This page is best viewed with a webbrowser. Get one today!<![endif]-->
+			<!--[if IE]>This page is best viewed with a webbrowser. <a href="http://www.getfirefox.com">Get one today!</a><![endif]-->
 		</div>
 	</body>
 </html>
