--- a/password.html
+++ b/password.html
@@ -4,41 +4,88 @@
 	<head>
 		<link rel="stylesheet" href="/jqueryui/css/cupertino/jquery-ui-1.8.16.custom.css">
 		<link rel="stylesheet" href="mystyle.css">
-		<script type="text/javascript" src="/flyingfox/jquery-1.6.2.js"></script>
+		<script type="text/javascript" src="/jquery-1.6.2.js"></script>
 		<script type="text/javascript" src="/jqueryui/js/jquery-ui-1.8.16.custom.min.js"></script>
-		<script type="text/javascript" src="/flyingfox/password-finder/password-visuals.js"></script>
-		<script type="text/javascript" src="/flyingfox/password-finder/generator.js"></script>
+		<script type="text/javascript" src="password-visuals.js"></script>
+		<script type="text/javascript" src="generator.js"></script>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>Passwort Generator</title>
+		<title>FlyingFoX&#8217; Passwort Generator</title>
 	</head>
 	<body>
-		<div class="input-error-dialog" id="wrong-text" title="Fehler bei der Eingabe!">
-			<p>Bitte geben Sie nur Zahlen von 1 bis 6 ein.</p>
-		</div>
-		<div id="header">
-			<h1>FlyingFoX' Passwort Generator</h1>
+		<div id="header" class="ui-state-default" >
+			<h1><a href="index.html">FlyingFoX&#8217; Passwort Generator</a></h1>
 		</div>
 		<ul id="menu">
-			<li ><a href="/flyingfox/password-finder/index.html">Willkommen</a></li>
-			<li ><a href="/flyingfox/password-finder/password.html">Neues Passwort generieren</a></li>
-			<li><a href="/flyingfox/password-finder/faq.html">Häufig gestellte Fragen (FAQ)</a></li>
+			<li><a href="index.html">Startseite</a></li>
+			<li><a href="password.html">Neues Passwort erstellen</a></li>
+			<li><a href="security.html">Sicherheit</a></li>
+			<li><a href="impressum.html">Impressum</a></li>
 		</ul>
 		<div id="body">
+			<form id="security-form">
+				<fieldset>
+					<legend>Wählen Sie aus welche Sicherheitsstufe Ihr Passwort haben soll</legend>
+					<input class="button" type="radio" name="security" id="security-low" value="low" checked />
+					<label for="security-low">Einfach und kurz</label>
+					<input class="button" type="radio" name="security" id="security-high" value="high" />
+					<label for="security-high">Sehr sicher</label>
+					<span id="security-info" class="ui-icon ui-icon-info" ></span>
+					<div class="dialog info for" for="security-low" id="usability-security-low">
+						<p>Es wird empfohlen das generierte Passwort nur für die folgenden Dienste zu verwenden:</p>
+						<ul>
+							<li>Webseiten auf denen Sie <i>nicht</i> ihren Namen angeben</li>
+							<li>Webseiten ohne Bezug zu Ihrem Geld</li>
+							<li>Online Spiele</li>
+						</ul>
+					</div>
+					<div class="dialog info for" for="security-high" id="usability-security-high" >
+						Dieses Passwort ist für alle Dienste geeignet. Sie sollten es aber nicht für mehr als einen der unten aufgeführten Dienste verwenden.
+						Für die folgenden Dienste sollte möglichst kein schwächeres Passwort gewählt werden.
+						<ul>
+							<li>E-Mail</li>
+							<li>Online Shops</li>
+							<li>Online Banking</li>
+							<li>Soziale Netzwerke wie Facebook, Google+, StudiVZ, MeinVZ, Xing, etc.</li>
+						</ul>
+					</div>
+				</fieldset>
+			</form>
 			<div id="instruction">
 				Es werden zufällige Daten benötigt, um das Passwort zu erstellen.<br>
-				Bitte holen Sie einen sechsseitigen Würfel und tragen Sie die gewürfelten Zahlen in das Würfel Feld ein.<br>
+				Diese können am sichersten mit einem Würfel erstellt werden.<br>
+				<p>Um zu Ihrem neuen Passwort zu kommen müssen Sie nur noch den Anweisungen folgen:</p>
+				<ol>
+				<li>Sechseitigen Würfel mit den Zahlen 1 bis 6 holen.</li>
+				<li>Würfeln</li>
+				<li>Gewürfelte Zahl in das Feld eintragen</li>
+				<li>Schritt 2 und 3 wiederholen, bis das Feld voll ist</li>
+				<li>
+				</ol>
 			</div>
 			<form id="dice-form">
-				<label for="dice-thrown">Gewürfelt:<br></label>
-				<input id="dice-thrown" name="dice-thrown" maxlength="15" type="text">
-				<input class="LCD" type="text" readonly="readonly" id="thrown"><span class="LCD">/</span>
-				<input class="LCD" type="text" readonly="readonly" id="needed">
-				<div id="progress"></div> 
+				<fieldset>
+					<legend>Gewürfelt</legend>
+					<input id="dice-thrown" name="dice-thrown" maxlength="15" type="text">
+					<input class="LCD" type="text" readonly="readonly" id="thrown"><span class="LCD">/</span>
+					<input class="LCD" type="text" readonly="readonly" id="needed">
+					<div id="progress"></div>
+					<div class="input-error dialog for" for="dice-thrown" id="wrong-text" title="Fehler bei der Eingabe!">
+						<p>Bitte geben Sie nur Zahlen von 1 bis 6 ein.</p>
+					</div>
+					<div class="input-error dialog for" for="dice-thrown" id="too-fast" title="Fehler bei der Eingabe!">
+						<p>Bitte würfeln Sie nur mit einem Würfel auf einmal und tragen Sie die gewürfelte Zahl nach jedem würfeln hier ein.</p>
+					</div>
+					<button type="reset">Zurücksetzen</button>
+				</fieldset>
 			</form>
 			<div id="newpassword">Ihr neues Passwort ist: <input type="text" readonly="readonly" /></div>
-		</div>
-		<div id="debug" class="ui-widget-content ui-widget">
-			<h3 class="ui-widget-header">Debug Text</h3>
+			<div class="error dialog for" for="newpassword" id="too-short" title="Fehler bei der Erstellung!">
+				<p>Leider ist das erstellte Passwort zu kurz um sicher zu sein. Dies passiert nur in seltenen Ausnahmefällen. Bitte würfeln Sie noch einmal neue Zahlen aus.</p>
+			</div>
+			<button type="text" id="options">Erweiterte Optionen Anzeigen</button>
+			<div class="dialog for" for="options" title="Erweiterte Optionen">
+				<button type="button" id="download-word-list">Die Wortliste herunterladen.</button>
+			</div>
 		</div>
 		<div id="footer">
 			<!--[if IE]>This page is best viewed with a webbrowser. Get one today!<![endif]-->
