added corners and an active state for the menu.

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 			<h1><a href="index.html">FlyingFoX&#8217; Passwort Generator</a></h1>
 		</div>
 		<ul id="menu">
-			<li ><a href="index.html" class="ui-state-active ui-state-default">Startseite</a></li>
-			<li ><a href="password.html">Neues Passwort erstellen</a></li>
-			<li><a href="security.html">Sicherheit</a></li>
-			<li><a href="impressum.html">Impressum</a></li>
+			<li ><a href="index.html" class="ui-state-active">Startseite</a></li>
+			<li ><a href="password.html" class="ui-state-default">Neues Passwort erstellen</a></li>
+			<li><a href="security.html" class="ui-state-default">Sicherheit</a></li>
+			<li><a href="impressum.html" class="ui-state-default">Impressum</a></li>
 		</ul>
 		<div id="body">
 			<p id="about">Dieser Passwort Generator soll Ihnen helfen sichere und einfach merkbare Passwörter zu erstellen. Dies wird dadurch erreicht, dass die erstellten Passwörter alle aus Worten oder einfachen Zeichenkombinationen bestehen. Ein typisches Passwort könnte z.B. so aussehen: <pre>
-ein tolles Passwort
+wein docht aber
 </pre>		</p>
-			<a href="password.html" class="button" id="generate-password">Passwort erstellen</a></button>
+			<a href="password.html" class="button" id="generate-password">Passwort erstellen</a>
 			
 			
 		</div>
