--- a/password.html
+++ b/password.html
@@ -16,10 +16,10 @@
 			<h1><a href="index.html">FlyingFoX&#8217; Passwort Generator</a></h1>
 		</div>
 		<ul id="menu">
-			<li><a href="index.html">Startseite</a></li>
-			<li><a href="password.html">Neues Passwort erstellen</a></li>
-			<li><a href="security.html">Sicherheit</a></li>
-			<li><a href="impressum.html">Impressum</a></li>
+			<li><a href="index.html" class="ui-state-default">Startseite</a></li>
+			<li><a href="password.html" class="ui-state-active">Neues Passwort erstellen</a></li>
+			<li><a href="security.html" class="ui-state-default">Sicherheit</a></li>
+			<li><a href="impressum.html" class="ui-state-default">Impressum</a></li>
 		</ul>
 		<div id="body">
 			<form id="security-form">
