fixed: password.html lacked the proper default font.

--- a/password.html
+++ b/password.html
@@ -11,7 +11,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 		<title>FlyingFoX&#8217; Passwort Generator</title>
 	</head>
-	<body>
+	<body class="ui-widget">
 		<div id="header" class="ui-state-default" >
 			<h1><a href="index.html">FlyingFoX&#8217; Passwort Generator</a></h1>
 		</div>
