better meta tags; impressum added; css update

--- a/password.html
+++ b/password.html
@@ -8,7 +8,11 @@
 		<script type="text/javascript" src="/jqueryui/js/jquery-ui-1.8.16.custom.min.js"></script>
 		<script type="text/javascript" src="password-visuals.js"></script>
 		<script type="text/javascript" src="generator.js"></script>
-		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+		<meta name="author" content="Matthias Fritsche">
+		<meta nam="description" lang="de" content="Mit diesem Passwort Generator können Sie einfach merkbare und sichere Passwörter erstellen.">
+		<meta name="keywords" lang="de" content="Passwort, erstellen, generieren, methode, kryptograpisch, sicher, einfach, merkbar">
+		<meta http-equiv="content-language" content="de">
 		<title>FlyingFoX&#8217; Passwort Generator</title>
 	</head>
 	<body class="ui-widget">
@@ -19,7 +23,6 @@
 			<li><a href="index.html" class="ui-state-default">Startseite</a></li>
 			<li><a href="password.html" class="ui-state-active">Neues Passwort erstellen</a></li>
 			<li><a href="security.html" class="ui-state-default">Sicherheit</a></li>
-			<li><a href="impressum.html" class="ui-state-default">Impressum</a></li>
 		</ul>
 		<div id="body">
 			<form id="security-form">
@@ -59,7 +62,6 @@
 				<li>Würfeln</li>
 				<li>Gewürfelte Zahl in das Feld eintragen</li>
 				<li>Schritt 2 und 3 wiederholen, bis das Feld voll ist</li>
-				<li>
 				</ol>
 			</div>
 			<form id="dice-form">
@@ -88,6 +90,7 @@
 			</div>
 		</div>
 		<div id="footer">
+		<a href="impressum.html">Impressum</a>
 			<!--[if IE]>This page is best viewed with a webbrowser. Get one today!<![endif]-->
 		</div>
 	</body>
