--- a/security.html
+++ b/security.html
@@ -8,6 +8,10 @@
 		<script type="text/javascript" src="/jqueryui/js/jquery-ui-1.8.16.custom.min.js"></script>
 		<script type="text/javascript" src="security-visuals.js"></script>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" >
+		<meta name="author" content="Matthias Fritsche">
+		<meta nam="description" lang="de" content="Mit diesem Passwort Generator können Sie einfach merkbare und sichere Passwörter erstellen.">
+		<meta name="keywords" lang="de" content="Passwort, erstellen, generieren, methode, kryptograpisch, sicher, einfach, merkbar">
+		<meta http-equiv="content-language" content="de">
 		<title>FlyingFox&#8217; Passwort Generator</title>
 	</head>
 	<body class="ui-widget" >
@@ -18,7 +22,6 @@
 			<li ><a href="index.html" class="ui-state-default">Startseite</a></li>
 			<li ><a href="password.html" class="ui-state-default">Neues Passwort erstellen</a></li>
 			<li><a href="security.html" class="ui-state-active">Sicherheit</a></li>
-			<li><a href="impressum.html" class="ui-state-default">Impressum</a></li>
 		</ul>
 		<div id="body">
 			<div class="question">
@@ -167,11 +170,12 @@
 					<li>Öffnen Sie die heruntergeladene Datei mit Notepad oder Wordpad oder einem anderen Texteditor.</li>
 					<li>Suchen Sie in der heruntergeladenen Wörterdatei nach der erwürfelten Zahlenkombination.</li>
 					<li>Schreiben Sie sich das dazugehörige Wort auf. Dies ist nun der erste Teil Ihres Passwortes.</li>
-					<li>Wiederholen Sie Schritt 2 bis 4 bis Sie mindestens 3 Wörter aufgeschrieben haben oder die gewünschte Länge für Ihr Passwort erhalten haben.</li>
+					<li>Wiederholen Sie Schritt 2 bis 5 bis Sie mindestens 3 Wörter aufgeschrieben haben und die gewünschte Länge für Ihr Passwort erhalten haben.</li>
 				</ol>
 			</div>
 		</div>
 		<div id="footer">
+		<a href="impressum.html">Impressum</a>
 			<!--[if IE]>This page is best viewed with a webbrowser. <a href="http://www.getfirefox.com">Get one today!</a><![endif]-->
 		</div>
 	</body>
