impressum footer fixed.

--- a/impressum.html
+++ b/impressum.html
@@ -32,6 +32,7 @@
 			</address>
 		</div>
 		<div id="footer">
+		<a href="impressum.html">Impressum</a>
 			<!--[if IE]>This page is best viewed with a webbrowser. <a href="http://www.getfirefox.com">Get one today!</a><![endif]-->
 		</div>
 	</body>
