trying to make the reset button more consistent
it shouldn't erase everything now, but only the stuff that has been
written by the user.

--- a/password.html
+++ b/password.html
@@ -77,10 +77,10 @@
 					<div class="input-error dialog for" for="dice-thrown" id="too-fast" title="Fehler bei der Eingabe!">
 						<p>Bitte würfeln Sie nur mit einem Würfel auf einmal und tragen Sie die gewürfelte Zahl nach jedem würfeln hier ein.</p>
 					</div>
-					<button type="reset">Zurücksetzen</button>
+					<button type="button" id="reset">Zurücksetzen</button>
 				</fieldset>
 			</form>
-			<div id="newpassword">Ihr neues Passwort ist: <input type="text" readonly="readonly" /></div>
+			<div id="newpassword">Ihr neues Passwort ist: <input type="text" readonly="readonly"></div>
 			<div class="error dialog for" for="newpassword" id="too-short" title="Fehler bei der Erstellung!">
 				<p>Leider ist das erstellte Passwort zu kurz um sicher zu sein. Dies passiert nur in seltenen Ausnahmefällen. Bitte würfeln Sie noch einmal neue Zahlen aus.</p>
 			</div>
