--- a/security.html
+++ b/security.html
@@ -28,7 +28,7 @@
 				<p>Warum muss ich für jedes neue Passwort würfeln?</p>
 			</div>
 			<div class="answer">
-				<p>Würfeln macht die Erzeugung von Zufallszahlen für Sie transparent. Um sicherzustellen, dass die Zufallszahlen ausreichend gut sind müssen Sie nur schauen ob der Würfel alle Zahlen von 1 bis 6 besitzt und würfelförmig ist.  <span class="more">Um die Qualität von Zufallszahlen zu beurteilen, die von einem Algorithmus erzeugt werden, müssen Sie nicht nur Programmieren können, um den Algorithmus lesen zu können, sondern auch sehr gute Kenntnisse der Mathematik besitzen. <span class="more">Desweiteren sorgt das Würfeln dafür, dass die Zufallszahlen nicht mehr nach einem zentralen Algorithmus erstellt werden, sondern dezentral. Dies hat zur Folge, dass ein schlecht zufälliger Würfel nur einen Angriff auf das Passwort eines Benutzers erlaubt, wohingegen ein schlechter Zufallszahlenalgorithmus gleich den Angriff auf die Passwörter von potentiell millionen Benutzern erlaubt. Siehe hierzu auch den <a href="http://lists.debian.org/debian-security-announce/2008/msg00152.html">Debian OPENSSL Security Bug</a>.</span></span></p>
+				<p>Würfeln macht die Erzeugung von Zufallszahlen für Sie transparent. Um sicherzustellen, dass die Zufallszahlen ausreichend gut sind müssen Sie nur testen ob der Würfel alle Zahlen von 1 bis 6 besitzt und würfelförmig ist.  <span class="more">Um die Qualität von Zufallszahlen zu beurteilen, die von einem Algorithmus erzeugt werden, müssen Sie nicht nur Programmieren können, um den Algorithmus lesen zu können, sondern auch sehr gute Kenntnisse der Mathematik besitzen. <span class="more">Desweiteren sorgt das Würfeln dafür, dass die Zufallszahlen nicht mehr nach einem zentralen Algorithmus erstellt werden, sondern dezentral. Dies hat zur Folge, dass ein schlecht zufälliger Würfel nur einen Angriff auf das Passwort eines Benutzers erlaubt, wohingegen ein schlechter Zufallszahlenalgorithmus gleich den Angriff auf die Passwörter von potentiell millionen Benutzern erlaubt. Siehe hierzu auch den <a href="http://lists.debian.org/debian-security-announce/2008/msg00152.html">Debian OPENSSL Security Bug</a>.</span></span></p>
 			</div>
 			<div class="question">
 				<p>Wie schwer ist es mein Passwort zu knacken?</p>
@@ -153,16 +153,16 @@
 			<div class="answer">
 				<p>Das ist durchaus richtig. Ich versichere Ihnen, dass ich mit dieser Webseite nicht versuchen werde Passwörter zu sammeln. Das erstellte Passwort ist auch zu keinem Zeitpunkt meinem Webserver bekannt, da sämtliche Berechnungen lokal auf Ihrem Computer mittels Javascript ausgeführt werden. Um sicher zu gehen, dass dem so ist können Sie z.B. folgendes tun:</p>
 				<ol>
-				<li>In den Privaten Modus wechseln<span class="more why">, um sicherzugehen, dass nach dem beenden dieser Seite keine Daten gespeichert sind.</span></li>
-				<li>Diese Seite aufrufen</li>
-				<li>Zu der Passwort erstellen Seite navigieren</li>
+				<li>In den Privaten Modus wechseln<span class="more why">, um sicherzugehen, dass nach dem Beenden dieser Seite keine Daten gespeichert sind.</span></li>
+				<li>Diese Seite aufrufen.</li>
+				<li>Zu der Seite <q>Neues Passwort erstellen</q> navigieren.</li>
 				<li>In den Offline Modus wechseln oder ihr Netzwerkkabel ziehen falls ihr Browser keinen Offline Modus unterstützt.<span class="more why"> Damit wird erreicht, dass nun weder Daten von Ihnen an diese Seite gesendet werden können, noch Daten von dieser Seite an Sie gesendet werden können.</span></li>
 				<li>Ihre Sicherheitsstufe auswählen</li>
 				<li>Würfeln um Ihr Passwort zu erstellen.</li>
 				<li>Schließen Sie Ihren Browser wieder, wenn Sie ein Passwort erstellt haben.<span class="more why"> Durch diesen Schritt in Kombination mit dem Privaten Modus wird sichergestellt, dass nach dem Erstellen Ihres Passwortes keinerlei Daten an diese Seite übertragen werden können.</span></li>
 				<li>Wechseln Sie wieder in den Online Modus<span class="more why">, damit Sie wieder normal im Internet surfen können.</li>
 				</ol>
-				<p>Alternativ können Sie sich auch den Quellcode dieser Seite Ansehen und nachvollziehen wie die Passworterstellung funktioniert.</p>
+				<p>Alternativ können Sie sich auch den Quellcode dieser Seite ansehen und nachvollziehen wie die Passworterstellung funktioniert.</p>
 				<p>Sie können sich Ihr Passwort auch per Hand erstellen. Das geht so:</p>
 				<ol>
 					<li>Die Wörterdatei von <a href="diceware_german_hash.json">hier</a> herunterladen.<span class="more how"> Rechtsklick auf <q>hier</q> und dann <q>Ziel speichern unter</q></span></li>
@@ -170,7 +170,7 @@
 					<li>Öffnen Sie die heruntergeladene Datei mit Notepad oder Wordpad oder einem anderen Texteditor.</li>
 					<li>Suchen Sie in der heruntergeladenen Wörterdatei nach der erwürfelten Zahlenkombination.</li>
 					<li>Schreiben Sie sich das dazugehörige Wort auf. Dies ist nun der erste Teil Ihres Passwortes.</li>
-					<li>Wiederholen Sie Schritt 2 bis 5 bis Sie mindestens 3 Wörter aufgeschrieben haben und die gewünschte Länge für Ihr Passwort erhalten haben.</li>
+					<li>Wiederholen Sie Schritt 2 bis 5 bis Sie mindestens 3 Wörter aufgeschrieben und die gewünschte Länge für Ihr Passwort erhalten haben.</li>
 				</ol>
 			</div>
 		</div>
