rewrote everything to use SSI for DRYer html code

--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,4 @@
-<!-- As this project is currently not running any server side interpreter just copy this text into every page.
-	It is ok for the "footer" to be an id and not a class because there should always only be one footer. -->
 <div id="footer">
+	<a href="impressum.shtml">Impressum</a>
 	<!--[if IE]>This page is best viewed with a webbrowser. <a href="http://www.getfirefox.com">Get one today!</a><![endif]-->
 </div>
