flattr, github and credits added

--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,7 @@
 <div id="footer">
-	<a href="impressum.shtml">Impressum</a>
+	- <a href="https://github.com/FlyingFoX/Password-Generator" target="_blank">Quellcode</a> - 
+	<a href="http://flattr.com/thing/416857/FlyingFoX%60-Passwort-Generator" target="_blank">
+		<img src="http://api.flattr.com/button/flattr-badge-large.png" alt="Spende an den Autor" title="Spende an den Autor" border="0" /></a> - 
+	<a href="impressum.shtml">Impressum</a> - 
 	<!--[if IE]>This page is best viewed with a webbrowser. <a href="http://www.getfirefox.com">Get one today!</a><![endif]-->
 </div>
